# nanoGPT

./: .gitignore  README_examples_on_silicon_mac.md  hello.ipynb  model.py  model_ger.py  pyproject.toml  sample.py  setup_on_jetson_nano.md  silicon_mac_usage.md  train.py
config/: finetune_bundestag_mps.py  finetune_shakespeare_mps.py  train_shakespeare_char_mps.py
config/examples/: 10_train_shakespeare_char_mps.py  11_.txt  20_train_shakespeare_mps.py  21_finetune_shakespeare_mps.py  22_finetune_shakespeare_mps.py  23_finetune_shakespeare_mps.py  30_finetune_bundestag_mps.py  31_finetune_bundestag_mps.py  32_finetune_bundestag_mps.py  33_finetune_bundestag_mps.py  34_finetune_bundestag_mps.py  35_finetune_bundestag_mps.py  36_finetune_bundestag_mps.py  37_finetune_bundestag_mps.py  38_finetune_bundestag_mps.py  40_train_bundestag_mps.py  41_train_bundestag_mps.py
data/bundestag/: prepare.py
data/bundestag_ger/: prepare.py
