[tool.poetry]
name = "nanoedGPT"
version = "0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
Cython = "*"
datasets = "*"
future = "*"
mock = "*"
pillow = "*"
testresources = "*"
tiktoken = "*"
torch = "*"
tqdm = "*"
transformers = "*"
wandb = "*"
wheel = "*"

[tool.poetry.dev-dependencies]
black = "*"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
